# nextauri

./: next.config.ts  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.client.tsx  page.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.client.tsx  page.tsx
